force-app/main/default/objects/Opportunity/fields/Auto_Close_Oppty_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Oppty_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Process Builder for Oppty auto closure. For quotes that are old in the system, that we didn&apos;t want to close via auto closure. Used data loader tool to update all Oppty&apos;s to have value of TRUE.

Criteria will look for Oppty&apos;s that are set to FALSE, which will be all net new Opptys</description>
    <label>Auto Close Oppty Criteria</label>
    <type>Checkbox</type>
</CustomField>