force-app/main/default/objects/Opportunity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Please choose a contact under the end customer account or quick create a new contact from the lookup screen</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities - Customer Contact</relationshipLabel>
    <relationshipName>Customer_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>