force-app/main/default/objects/Opportunity/fields/Customer_Currency__c.field-meta.xml
<CustomField>
    <fullName>Customer_Currency__c</fullName>
    <inlineHelpText>This selection drives currency conversions of currency fields on quote and quote line</inlineHelpText>
    <label>Customer Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>