force-app/main/default/objects/Opportunity/fields/End_Use_Application__c.field-meta.xml
<CustomField>
    <fullName>End_Use_Application__c</fullName>
    <label>End Use Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>