force-app/main/default/objects/Opportunity/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 5 AND 2) OR (1 AND 4 AND (3 OR 6))</booleanFilter>
        <errorMessage>The Account provided must not be a Representative if the Type is something other than Stocking Distributor.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>notEqual</operation>
            <value>Representative</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Agent, Bill-To, Competitor, Consultant, Contractor/Sub-contractor, End User, EPC Contractor, Other, Parent, Report/Service Co., Representative, Reseller/Trader, Ship-To</value>
        </filterItems>
        <filterItems>
            <field>$Source.Type</field>
            <operation>equals</operation>
            <value>Stocking Distributor</value>
        </filterItems>
        <filterItems>
            <field>$Source.Type</field>
            <operation>notEqual</operation>
            <value>Stocking Distributor</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>End User Opportunities</relationshipLabel>
    <relationshipName>EndUserAccount</relationshipName>
    <type>Lookup</type>
</CustomField>