force-app/main/default/objects/Opportunity/fields/EPC_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>EPC_Firm_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Engineering, Procurement, Construction company involved in development (e.g. Jacobs, Fluor, etc.)</inlineHelpText>
    <label>EPC Firm Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EPC Firm Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>