force-app/main/default/objects/Opportunity/fields/KnownCompAdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>KnownCompAdditionalInfo__c</fullName>
    <label>Known Comp Additional Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>