force-app/main/default/objects/Opportunity/fields/Opp_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Opp_Rep_Code__c</fullName>
    <label>Opp Rep Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>