force-app/main/default/objects/Opportunity/fields/PecWeb_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>PecWeb_Project_ID__c</fullName>
    <inlineHelpText>If there is a PecWeb ID associated with this Opportunity please provide it here</inlineHelpText>
    <label>PecWeb Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>