force-app/main/default/objects/Opportunity/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>Very Low</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Low</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>75</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>95</fullName>
                <label>Very High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>