force-app/main/default/objects/Opportunity/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continental Disc Products</fullName>
            </value>
            <value>
                <fullName>Groth BioGas Products</fullName>
            </value>
            <value>
                <fullName>Groth Valve Products</fullName>
                <label>Groth Industrial</label>
            </value>
            <value>
                <fullName>LVA</fullName>
                <label>LaMOT Valve &amp; Arrestor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>