force-app/main/default/objects/Opportunity/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy/Resell</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
                <default>true</default>
                <label>Commission</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>