force-app/main/default/objects/Opportunity/fields/Quoted_by_REP__c.field-meta.xml
<CustomField>
    <fullName>Quoted_by_REP__c</fullName>
    <label>Quoted by REP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>