force-app/main/default/objects/Opportunity/fields/Reference_Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reference_Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is requested by RSMs and used to link the Outside Account Manager to Oppty/Quote</description>
    <inlineHelpText>This is a USER lookup. Used to link the Outside Account Manager</inlineHelpText>
    <label>Reference Secondary Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>