force-app/main/default/objects/Opportunity/fields/Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code__c</fullName>
    <label>Rep Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rep_Code</valueSetName>
    </valueSet>
</CustomField>