force-app/main/default/objects/Opportunity/fields/Requested_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Ship_Date__c</fullName>
    <label>Requested Ship Date</label>
    <type>Date</type>
</CustomField>