force-app/main/default/objects/Opportunity/fields/Sales_Division1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Division1__c</fullName>
    <label>Sales Division Del</label>
    <length>4</length>
    <type>Text</type>
</CustomField>