force-app/main/default/objects/Opportunity/fields/Salespersonold__c.field-meta.xml
<CustomField>
    <fullName>Salespersonold__c</fullName>
    <label>Salesperson</label>
    <length>80</length>
    <type>Text</type>
</CustomField>