force-app/main/default/objects/Opportunity/fields/Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Ship To Account)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>