force-app/main/default/objects/Opportunity/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AF1</fullName>
            </value>
            <value>
                <fullName>D01</fullName>
            </value>
            <value>
                <fullName>D02</fullName>
            </value>
            <value>
                <fullName>D03</fullName>
            </value>
            <value>
                <fullName>D04</fullName>
            </value>
            <value>
                <fullName>D05</fullName>
            </value>
            <value>
                <fullName>D06</fullName>
            </value>
            <value>
                <fullName>DDH1</fullName>
            </value>
            <value>
                <fullName>DNIH</fullName>
            </value>
            <value>
                <fullName>DOE1</fullName>
            </value>
            <value>
                <fullName>DOE2</fullName>
            </value>
            <value>
                <fullName>DOE3</fullName>
            </value>
            <value>
                <fullName>DUPS</fullName>
            </value>
            <value>
                <fullName>E0</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>EU1</fullName>
            </value>
            <value>
                <fullName>EU2</fullName>
            </value>
            <value>
                <fullName>EU3</fullName>
            </value>
            <value>
                <fullName>EU4</fullName>
            </value>
            <value>
                <fullName>FR1</fullName>
            </value>
            <value>
                <fullName>Hose Valve</fullName>
            </value>
            <value>
                <fullName>LA1</fullName>
            </value>
            <value>
                <fullName>LA2</fullName>
            </value>
            <value>
                <fullName>LA3</fullName>
            </value>
            <value>
                <fullName>LaMOT Direct</fullName>
            </value>
            <value>
                <fullName>LOE1</fullName>
            </value>
            <value>
                <fullName>ME1</fullName>
            </value>
            <value>
                <fullName>ME2</fullName>
            </value>
            <value>
                <fullName>OC1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>