force-app/main/default/objects/Opportunity/fields/Win_Probability__c.field-meta.xml
<CustomField>
    <fullName>Win_Probability__c</fullName>
    <description>RSMs to use when updating Opportunity Reports</description>
    <label>Win Probability %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>