force-app/main/default/objects/Opportunity/fields/Winning_Comp_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Winning_Comp_Additional_Info__c</fullName>
    <inlineHelpText>If selecting Other on the Winning Competition field, please input who won the Opportunity here</inlineHelpText>
    <label>Winning Comp Additional Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>