force-app/main/default/objects/Opportunity/fields/Winning_Competition__c.field-meta.xml
<CustomField>
    <fullName>Winning_Competition__c</fullName>
    <inlineHelpText>Select the Competitor who won this Opportunity</inlineHelpText>
    <label>Winning Competition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BS&amp;B</fullName>
            </value>
            <value>
                <fullName>Fike</fullName>
            </value>
            <value>
                <fullName>OsecoElfab</fullName>
            </value>
            <value>
                <fullName>Zook</fullName>
            </value>
            <value>
                <fullName>Rembe</fullName>
            </value>
            <value>
                <fullName>Protego</fullName>
            </value>
            <value>
                <fullName>L &amp; J Tech (Shand &amp; Jurs)</fullName>
            </value>
            <value>
                <fullName>Varec Biogas</fullName>
            </value>
            <value>
                <fullName>Emmerson</fullName>
            </value>
            <value>
                <fullName>Protectoseal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>