force-app/main/default/objects/Opportunity/validationRules/Check_Brand_on_User_to_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Brand_on_User_to_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>Text($User.UserType) = &quot;PowerPartner&quot; &amp;&amp; IF(CONTAINS($User.Brand_Text__c, Text(Brand__c)), FALSE, TRUE)</errorConditionFormula>
    <errorDisplayField>Brand__c</errorDisplayField>
    <errorMessage>Please limit selection of Brand to just those that are valid for your company</errorMessage>
</ValidationRule>