force-app/main/default/objects/Opportunity/validationRules/Loss_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( StageName ),  ISPICKVAL( StageName , &apos;Closed Lost&apos;),  ISBLANK(TEXT(Loss_Reason__c))  )</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Closed Lost opportunity requires Loss Reason</errorMessage>
</ValidationRule>