force-app/main/default/objects/Opportunity/validationRules/QuoteCreate_Discover_Identified.validationRule-meta.xml
<ValidationRule>
    <fullName>QuoteCreate_Discover_Identified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),  TEXT(StageName) &lt;&gt; &apos;Discovery/Identified&apos;)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Please start your Opportunity lifecycle with the first stage: Discover/Identified</errorMessage>
</ValidationRule>