force-app/main/default/objects/Opportunity/validationRules/Restrict_Opty_Currency_Code_to_USD.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Opty_Currency_Code_to_USD</fullName>
    <active>true</active>
    <errorConditionFormula>(DATEVALUE(CreatedDate) &gt; DATE(2020, 07, 11) || isNEW()) &amp;&amp;  NOT(ISPICKVAL(CurrencyIsoCode, &apos;USD&apos;))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>This is config currency code. Please limit the selection to USD. For converted prices, please choose your preference on Customer Currency field above</errorMessage>
</ValidationRule>