force-app/main/default/objects/Opportunity/validationRules/Winning_Comp_Additional_Info_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Winning_Comp_Additional_Info_Required</fullName>
    <active>true</active>
    <description>A value is needed in Winning Comp Additional Info when a user selects &apos;Other&apos; in Winning Competition</description>
    <errorConditionFormula>ISPICKVAL( Winning_Competition__c , &apos;Other&apos;) &amp;&amp;
ISBLANK(Winning_Comp_Additional_Info__c)</errorConditionFormula>
    <errorDisplayField>Winning_Comp_Additional_Info__c</errorDisplayField>
    <errorMessage>If you select &apos;Other&apos; in Winning Competition, then additional info is needed in Winning Comp Additional Info</errorMessage>
</ValidationRule>